@@ -1,5 +1,12 @@
 2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 03022] SSL certificates of frame body
+	* frame.h (frame_body): add ssl_certificate
+	* frame.c (frame_download_source): save ssl_certificate
+	* map.c (append_frame_info): display ssl_certificate of frame_body
+
+2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 03021] Bug#132934: w3m should recognize file:/uris
 				in chkURLBuffer function
 	* main.c (chkURLBuffer): add "file:" 
@@ -2886,4 +2893,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.309 2002/02/08 11:37:09 ukai Exp $
+$Id: ChangeLog,v 1.310 2002/02/08 11:45:07 ukai Exp $
